--- a/g6/Class08/Code_From_Class/style.css
+++ b/g6/Class08/Code_From_Class/style.css
@@ -3,6 +3,7 @@
 
 p {
     font-family: 'Roboto Mono', monospace;
+    text-align: justify-all;
 }
 
 #header {
@@ -54,4 +55,32 @@ h1 {
     text-decoration: underline;
     text-decoration-style: dotted;
     text-decoration-color: red;
+}
+
+.line-height-example {
+    line-height: 50px;
+    letter-spacing: 5px;
+    word-spacing: 15px;
+    text-align: center;
+}
+
+.border-example {
+    border: 1px double red;
+    padding: 20px;
+}
+
+.border-example-child {
+    border: inherit
+}
+.shadow-text {
+    text-shadow: 10px 10px 1px black, 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6
+}
+p::first-letter {
+    font-size: 50px;
+    color: green;
+}
+
+p::first-line {
+    color:red;
+    padding-left: 30px
 }
